cloud/w10/lab-temp/argocd/gatekeeper/constraints/c-allowed-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistry
metadata:
  name: allowed-registry
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
  parameters:
    allowedRegistry: "ghcr.io/x-brain-cdo-09/"
